# FM-Synthesiser

./: .gitignore  ADSR.h  AudioSettings.h  CMakeLists.txt  Controller.cpp  Controller.h  Oscillator.cpp  Oscillator.h  OscillatorVariables.h  README.md  RandomGenerator.cpp  RandomGenerator.h  VoiceCallback.cpp  VoiceCallback.h  main.cpp
UI/: ParameterKnob.cpp  ParameterKnob.h  Resources.qrc  SynthUI.cpp  SynthUI.h  SynthUI.ui  WaveRenderer.cpp  WaveRenderer.cpp~  WaveRenderer.h
